@@ -27,6 +27,7 @@
 	                 changed manpage to Unix line endings so it displays properly in Konqueror
 	- [kevin] $1857: by default, KDE-enabled builds now use the KDE file selector only when running KDE
 	- [kevin] $1858: enable KDE support by default (except on MinGW)
+	- [kevin] $1870: fix libtifiles2 0.0.5 charset problem on Win32
 * libticables2 changes (roms):
 	- modified TiEmu virtual link for Windows: don't use .shared section 
 	any more. This breaks compat with older revision of the library but 
